# miyoo-mini-rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  input.rs  main.rs
src/platform/: miyoo.rs  mod.rs  simulator.rs
static/Rust App Example.pak/: config.json  launch.sh
